--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -75,7 +75,9 @@ admin_34 : "ғᴀɪʟᴇᴅ ᴛᴏ sᴇᴇᴋ."
 
 # Start
 start_1 : "𝗧𝗵𝗮𝗻𝗸𝘀 𝗳𝗼𝗿 𝗔𝗱𝗱𝗶𝗻𝗴 𝗺𝗲 𝗶𝗻 {0}.\n{1} 𝗖𝗮𝗻 𝗡𝗼𝘄 𝗣𝗹𝗮𝘆 𝗦𝗼𝗻𝗴𝘀 𝗶𝗻 𝘁𝗵𝗶𝘀 𝗖𝗵𝗮𝘁.\n\n[🆘 𝐬𝐮𝐩𝐩𝐨𝐫𝐭 🆘](https://t.me/TKS_CHATTING_GROUP)\n[𝐉𝐨𝐢𝐧 𝐮𝐩𝐝𝐚𝐭𝐞𝐬](https://t.me/REAL_FEELINGS_OF_LAV)"
-start_2 : "𝗛𝗲𝗹𝗹𝗼, 𝗜 𝗔𝗺 𝗟𝗮𝗶𝗹𝗮-𝗺𝘂𝘀𝗶𝗰 𝗽𝗹𝗮𝘆𝗲𝗿 𝗨𝗹𝘁𝗿𝗮 𝗙𝗮𝘀𝘁 𝗩𝗰 𝗣𝗹𝗮𝘆𝗲𝗿 𝗕𝗼𝘁 𝗳𝗼𝗿 𝗧𝗲𝗹𝗲𝗴𝗿𝗮𝗺 𝗚𝗿𝗼𝘂𝗽𝘀 🌹... \n\n┏━━━━━━━━━━━━━━━━━┓\n┣☞ 𝗖𝗿𝗲𝗮𝘁𝗼𝗿 :: [𝐦𝐢𝐬𝐬 𝐩𝐡𝐲𝐬𝐜𝐨](https://t.me/GilletringPrincesXD)\n┣☞ 𝐛𝐬𝐝𝐤 𝐡𝐞𝐥𝐩 𝐦𝐚𝐚𝐠 :: [𝐩𝐡𝐲𝐬𝐜𝐨 𝐠𝐫𝐨𝐮𝐩](https://t.me/TKS_CHATTING_GROUP)\n┣☞ 𝐮𝐩𝐝𝐚𝐭𝐞𝐬 :: [HERE](https://t.me/REAL_FEELINGS_OF_LAV)\n┗━━━━━━━━━━━━━━━━━┛"
+start_2 : "➤ 𝐇𝐞𝐲 𝐓𝐡𝐢𝐬 𝐢𝐬 𝐩𝐡𝐲𝐬𝐜𝐨-𝐦𝐮𝐬𝐢𝐜 𝐩𝐥𝐚𝐲𝐞𝐫 🥀 𝐟𝐨𝐫 𝐭𝐞𝐥𝐞𝐠𝐫𝐚𝐦 𝐠𝐫𝐨𝐮𝐩𝐬 𝐚𝐧𝐝 𝐜𝐡𝐚𝐧𝐧𝐞𝐥𝐬 𝐰𝐢𝐭𝐡 𝐚𝐝𝐯𝐚𝐧𝐜𝐞𝐝 𝐟𝐞𝐚𝐭𝐮𝐫𝐞𝐬⚡
+
+➤𝐃𝐞𝐩𝐥𝐨𝐲𝐞𝐝 𝐨𝐧 𝐯𝐩𝐬 𝐞𝐧𝐣𝐨𝐲 𝐭𝐡𝐞 𝐥𝐚𝐠 𝐟𝐫𝐞𝐞 𝐚𝐧𝐝 𝐡𝐢𝐠𝐡 𝐐𝐮𝐚𝐥𝐢𝐭𝐲 𝐦𝐮𝐬𝐢𝐜 𝐖𝐢𝐭𝐡 𝐛𝐚𝐬𝐬🤍🥀 🌹... \n\n┏━━━━━━━━━━━━━━━━━┓\n┣☞ 𝗖𝗿𝗲𝗮𝘁𝗼𝗿 :: [𝐦𝐢𝐬𝐬 𝐩𝐡𝐲𝐬𝐜𝐨](https://t.me/GilletringPrincesXD)\n┣☞ 𝐛𝐬𝐝𝐤 𝐡𝐞𝐥𝐩 𝐦𝐚𝐚𝐠 :: [𝐩𝐡𝐲𝐬𝐜𝐨 𝐠𝐫𝐨𝐮𝐩](https://t.me/TKS_CHATTING_GROUP)\n┣☞ 𝐮𝐩𝐝𝐚𝐭𝐞𝐬 :: [HERE](https://t.me/REAL_FEELINGS_OF_LAV)\n┗━━━━━━━━━━━━━━━━━┛"
 start_3 : "ʜᴇʏ,\n  ᴛʜɪs ɪs {0}\n\nᴀ ғᴀsᴛ ᴀɴᴅ ᴩᴏᴡᴇʀғᴜʟ ᴍᴜsɪᴄ ᴩʟᴀʏᴇʀ ʙᴏᴛ ᴡɪᴛʜ sᴏᴍᴇ ᴀᴡᴇsᴏᴍᴇ ғᴇᴀᴛᴜʀᴇs.\n\nᴀssɪsᴛᴀɴᴛ ᴜsᴇʀɴᴀᴍᴇ:- @{1}\nᴀssɪsᴛᴀɴᴛ ɪᴅ:- {2}"
 start_4 : "ᴛʜᴇ ᴏᴡɴᴇʀ ᴏғ {0}, [{1}] ᴊᴜsᴛ ᴊᴏɪɴᴇᴅ ʏᴏᴜʀ ᴄʜᴀᴛ."
 start_5 : "ᴛʜᴇ sᴜᴅᴏ ᴜsᴇʀ ᴏғ {0}, [{1}] ᴊᴜsᴛ ᴊᴏɪɴᴇᴅ ʏᴏᴜʀ ᴄʜᴀᴛ."
